prd/soludev/logto/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forward-proto-https
  namespace: soludev
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
